--- a/css/main_stylesheet.css
+++ b/css/main_stylesheet.css
@@ -84,21 +84,23 @@ a{
 #fullpage{}
 
 /*섹션1 시작*/
-.section{
+#section1{
 
 }
 .logo{
     text-align: center;
-    padding-top: 120px;
+    padding-top: 150px; /*집에서 수정*/
 }
 .logo img{
-    width: 180px;
+    width: 200px;
 }
 .logo img:last-child{
     display: none;
 }
 /*about me 시작*/
-.aboutme{}
+.aboutme{
+    position: relative;
+}
 .aboutme h1{
     font-size:60px;
     text-align: center;
@@ -113,7 +115,10 @@ a{
     text-align: center;
     margin-top: 50px;
 }
-.skill, .blue{
+.blueboxing{
+    width: 460px;
+}
+.skill, .blueboxing{
     display: inline-block;
     vertical-align: middle;
 }
@@ -176,9 +181,11 @@ a{
     padding-top: 80px;
 }
 .morebtn{
+    width: 120px;
     position: absolute;
-    right: 20%;
-    margin-top: 55px;
+    right: 50%;
+    margin-right: -60px;
+    margin-top: 20px;
 }
 .morebtn:after{
     content: "";
@@ -364,6 +371,9 @@ button a{
 #pannelbg{
     display: none;
 }
+.footertopbtn{
+    display: none;
+}
 /*웹에서 보이지 않음*/
 
 
@@ -397,10 +407,11 @@ button a{
     #header{
         width: 100%;
         padding: 20px;
-        height: 80px;
+        height: 120px;
         background: #fff;
-        position: fixed;
         z-index: 1;
+        position: static;
+        box-sizing: border-box;
     }
     /*headerIn 시작*/
     .headerIn{
@@ -426,7 +437,7 @@ button a{
     .rightmenu{
         display: block;
         position: absolute;
-        right: 40px;
+        right: 10px;
         top: 8px;
     }
     .rightmenu div{
@@ -453,6 +464,7 @@ button a{
         right: 0;
         font-size: 50px;
         padding-right: 20px;
+        z-index: 3;
     }
     .sidenav {
         height: 100%;
@@ -474,10 +486,10 @@ button a{
     }
     .navTop div{
         display: inline-block;
-        margin: 15px 0;
+        margin: 0;
     }
     .navTop .navLogo{
-        padding-left: 12px;
+        padding: 20px;
     }
     .navTop .navLogo a{
         display: block;
@@ -495,14 +507,14 @@ button a{
     .sidenav .navMenu a {
         /*padding: 8px 8px 8px 32px;*/
         text-decoration: none;
-        font-size: 30px;
+        font-size: 24px;
         font-family: 'Century Gothic';
         color: #000;
         display: block;
         transition: 0.3s;
     }
     .sidenav .navMenu div:nth-child(3) a{
-        margin-top: 20px;
+        margin-top: 14px;
     }
     .sidenav .navMenu div:nth-child(3) a, 
     .sidenav .navMenu div:nth-child(4) a{
@@ -512,11 +524,11 @@ button a{
     .bottomLogo{
         text-align: center;
         position: absolute;
-        bottom: 10px;
+        bottom: 5%;
         left: 0;
     }
     .bottomLogo img{
-        width: 180px;
+        width: 150px;
     }
     
     /*섹션1*/
@@ -529,6 +541,8 @@ button a{
     .logo{
         width: 100%;
         margin-bottom: 50px;
+        margin-top: 50px;
+        padding-top: 0;
     }
     .logo img:first-child{
         display: none;
@@ -555,59 +569,83 @@ button a{
         display: none;
     }
     
+.skill, .blueboxing{
+    display: inline-block;
+    vertical-align: middle;
+}
     
     /*파란색 그래프*/
     .graph{
         width: 100%;
-        margin-top: 35px;
+        margin: 30px auto;
+        text-align: center;
+        position: static;
+        margin-right: 0;
+    }
+    .blueboxing{
+        width: 230px;
+    }
+    .skill, .blueboxing{
+        display: inline-block;
+        vertical-align: middle;
     }
     .graph div{
-        font-size: 11px;
+        font-size: 12px;
     }
     .skill{}
-    .skill ul li{
+    .skill li{
         text-align: right;
         color: #777777;
-        margin: 16px 0;
+        margin: 15px 0;
     }
+
     .blue {
-        width:40%;
-        }
+        width:170px;
+    }
+    
+    
     /** Progressbar class css*/
     .progressbar {
         width: 100%;
-        margin: 14px 0;
-        margin-left: 10px;
+        margin: 15px;
         position: relative;
         background-color: #eeeeee;
         box-shadow: inset 0px 1px 1px rgba(0,0,0,.1);
     }
 
     .proggress{
-        height: 11px;
+        height: 12px;
         width: 10px;
         background-color: #100ded;
     }
+
     .percentCount{
         position: absolute;
+        right: -40px;
         top: 0;
         clear: both;
         font-size: 14px;
         color: #100ded;
     }
     
+    
+    
+    
+    
     /*섹션2 시작*/
     #section2{
-        margin-top: 0;
+        width: 100%;
+        height: 100%;
         background: url(../images/main/work_bg.jpg) no-repeat;
-        background-size: 100%;
-        padding: 30px 0;
+        background-size: cover;
+        margin-top: 0;
     }
     .bg{
         text-align: center;
         width: 100%;
-        height: 100%;
+        height: 250px;
         background: rgba(0,0,0,0.7);
+        padding-top: 30px;/*집에서 수정*/
     }
     
     .bg h1{
@@ -617,9 +655,11 @@ button a{
         padding-top: 0;
     }
     .morebtn{
+        width: 120px;
         position: absolute;
-        right: 5%;
-        margin-top: 10px;
+        right: 50%;
+        margin-right: -60px;
+        margin-top: 20px;
     }
     .morebtn a p{
         font-size: 20px;
@@ -683,9 +723,9 @@ button a{
         margin: 0 auto;
         background: none;
         border: 5px solid #100ded;
-        margin-top: 50px;
+        margin-top: 30px;
         position: relative;
-        padding: 30px 0;
+        padding: 10px 0;
     }
     .bluebox div{}
 
@@ -777,7 +817,35 @@ button a{
     }
     
     .section fp-auto-height{}
+    #section4{
+        position: relative;
+    }
+    #section4 p{
+        text-align: center;
+        padding: 10px 0;
+        color: #e0e0e0;
+        font-size: 14px;
+        background: #909090;
+}
     
+    /*footer topbtn*/
+    .footertopbtn{
+        display: block;
+        width: 35px;
+        height: 35px;
+        line-height:35px;
+        background: #fff;
+        border: 1px solid #e0e0e0;
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        text-align: center;
+        font-size: 13px;
+    }
+    .footertopbtn a{
+        color: #969696;
+        font-weight: bold;
+    }
 }
 /*반응형*/
 
