--- a/css/sub_aboutme_stylesheet.css
+++ b/css/sub_aboutme_stylesheet.css
@@ -54,18 +54,21 @@ a{
 /*header*/
 #header{
     width: 100%;
-    height: 120px;
+    height: auto;
     background: #f0f0f0;
     position: fixed;
     z-index: 1;
+    box-sizing: border-box;
 }
 /*headerIn 시작*/
-.headerIn{}
+.headerIn{
+    height: auto;
+}
 .headerIn h1{
     position: relative;
     display: inline-block;
     vertical-align: middle;
-    height: 100px;
+    height: auto;
     margin: 10px 0;
 }
 .headerIn h1 a{
@@ -123,10 +126,12 @@ a{
 .aboutme{}
 .aboutme h1{
     text-align: center;
+    font-size:60px;
     color: #858585;
     margin-top: 100px;
 }
 .aboutme h1 p{
+    font-size:48px
     color: #aeaeae;
 }
 
@@ -142,20 +147,19 @@ a{
     text-align: center;
     margin-top: 50px;
 }
-.skill, .blue{
+.blueboxing{
+    width: 460px;
+}
+.skill, .blueboxing{
     display: inline-block;
     vertical-align: middle;
 }
-.graph div{
-    font-size: 14px;
-}
-
 
 .skill{}
 .skill li{
     text-align: right;
     color: #777777;
-    margin: 15px 0;
+    margin: 10px 0;
 }
 
 .blue {
@@ -320,13 +324,20 @@ a{
 }
 
 /*웹에서 보이지 않음*/
+.headerIn h2{
+    display: none;
+}
 .rightmenu{
     display: none;
 }
 #pannelbg{
     display: none;
 }
+.footertopbtn{
+    display: none;
+}
 /*웹에서 보이지 않음*/
+
 
 
 /*반응형*/
@@ -359,9 +370,9 @@ a{
     #header{
         width: 100%;
         padding: 20px;
-        height: 80px;
-        background: #fff;
-        position: fixed;
+        height: 120px;
+        background: #e9e9e9;
+        position: static;
         z-index: 1;
     }
     /*headerIn 시작*/
@@ -380,7 +391,20 @@ a{
     .headerIn h1 a img{
         width: 80px;
     }
+    .headerIn h2{
+        display: block;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        text-align: center;
+        font-size: 20px;
+        color: #858585;
+        padding-top: 25px;
+    }
     .gnb{
+        display: none;
+    }
+    .logo{
         display: none;
     }
     
@@ -388,7 +412,7 @@ a{
     .rightmenu{
         display: block;
         position: absolute;
-        right: 40px;
+        right: 10px;
         top: 8px;
     }
     .rightmenu div{
@@ -415,6 +439,7 @@ a{
         right: 0;
         font-size: 50px;
         padding-right: 20px;
+        z-index: 3;
     }
     .sidenav {
         height: 100%;
@@ -436,10 +461,10 @@ a{
     }
     .navTop div{
         display: inline-block;
-        margin: 15px 0;
+        margin: 0;
     }
     .navTop .navLogo{
-        padding-left: 12px;
+        padding: 20px;
     }
     .navTop .navLogo a{
         display: block;
@@ -457,14 +482,14 @@ a{
     .sidenav .navMenu a {
         /*padding: 8px 8px 8px 32px;*/
         text-decoration: none;
-        font-size: 30px;
+        font-size: 24px;
         font-family: 'Century Gothic';
         color: #000;
         display: block;
         transition: 0.3s;
     }
     .sidenav .navMenu div:nth-child(3) a{
-        margin-top: 20px;
+        margin-top: 14px;
     }
     .sidenav .navMenu div:nth-child(3) a, 
     .sidenav .navMenu div:nth-child(4) a{
@@ -474,93 +499,278 @@ a{
     .bottomLogo{
         text-align: center;
         position: absolute;
-        bottom: 10px;
+        bottom: 5%;
         left: 0;
     }
     .bottomLogo img{
-        width: 180px;
-    }
-    
-    /*섹션1*/
-    #section1{
-        position: relative;
-        padding: 0;
-    }
-    
-    /*로고 이미지*/
-    .logo{
-        width: 100%;
-        margin-bottom: 50px;
-    }
-    .logo img:first-child{
-        display: none;
-    }
-    .logo img:last-child{
         width: 150px;
-        display: block;
-        text-align: center;
+    }
+    /*섹션2 시작*/
+    #section2{}
+
+    /*about me 시작*/
+    .aboutme{
+        margin-top: 50px;
         margin: 0 auto;
     }
-    
-    /*어바웃미*/
-    .aboutme{
-        text-align: center;
-        width: 100%;
-        padding: 30px 0;
-        background: #f0f0f0;
-        position: relative;
-    }
     .aboutme h1{
+        text-align: center;
         font-size: 40px;
+        color: #858585;
+        margin-top: 50px;
     }
     .aboutme h1 p{
-        display: none;
+        font-size: 24px;
+        color: #aeaeae;
     }
-    
-    
+
+    .contentTitle01{
+        text-align: center;
+        margin-top: 30px;
+    }
+    .contentTitle01 img{}
+
+
     /*파란색 그래프*/
     .graph{
         width: 100%;
-        margin-top: 35px;
+        margin: 30px auto;
+        text-align: center;
+        position: static;
+        margin-right: 0;
+    }
+     .blueboxing{
+        width: 230px;
+    }
+    .skill, .blueboxing{
+        display: inline-block;
+        vertical-align: middle;
     }
     .graph div{
-        font-size: 11px;
+        font-size: 12px;
     }
     .skill{}
-    .skill ul li{
+    .skill li{
         text-align: right;
         color: #777777;
-        margin: 16px 0;
+        margin: 15px 0;
     }
+
     .blue {
-        width:40%;
-        }
+        width:170px;
+    }
+    
+    
     /** Progressbar class css*/
     .progressbar {
         width: 100%;
-        margin: 14px 0;
-        margin-left: 10px;
+        margin: 15px;
         position: relative;
         background-color: #eeeeee;
         box-shadow: inset 0px 1px 1px rgba(0,0,0,.1);
     }
 
     .proggress{
-        height: 11px;
+        height: 12px;
         width: 10px;
         background-color: #100ded;
     }
+
     .percentCount{
         position: absolute;
+        right: -40px;
         top: 0;
         clear: both;
         font-size: 14px;
         color: #100ded;
     }
+
+
+    /*섹션3*/
+    #section{}
+    .core{
+        padding: 50px 0;
+    }
+    .core h1{
+        text-align: center;
+        font-size: 48px;
+        color: #858585;
+        padding-top: 0;
+    }
+
+    .coreIcon{
+        margin-top: 30px;
+        text-align: center;
+    }
+    .coreIcon li{
+        width: 40%;
+        display: inline-block;
+        margin: 0;
+    }
+    .coreIcon li:first-child, .coreIcon li:nth-child(3){
+        margin-left: 20px;
+    }
+    .coreIcon li:nth-child(2), .coreIcon li:last-child{
+        margin-right: 20px;
+    }
+    .coreIcon li:first-child, .coreIcon li:nth-child(2){
+        margin-bottom: 20px;
+    }
+    .coreIcon li:nth-child(3) img{
+        height: 60px;
+    }
+    .coreIcon li img{
+        width: 30%;
+    }
+    .coreIcon li p{
+        font-family: 'NanumSquare';
+        font-size: 13px;
+        color: #5e5e5e;
+        margin-top: 10px;
+    }
+
+    
+    #section4{
+        padding-bottom: 100px;
+    }
+.show-on-scroll { visibility: hidden; }
+.show-on-scroll.shown { visibility: visible; }
+
+.history{}
+.history h1{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+.historygraph{}
+.center{
+    width: 3px;
+    height: 300px;
+    background: #100ded;
+    margin: 0 auto;
+    position: relative;
+}
+.historygraph div{
+    color: #777777;
+    font-weight: 600;
+    font-size: 12px;
+    font-family: 'NanumSquare';
+    margin: 0 auto;
+}
+.historygraph div p{
+    color: #100ded;
+    margin-bottom: 10px;
+}
+.cont{
+    margin: 0 auto;
+}
+.cont01{}
+.cont02{}
+.cont03{}
+.cont04{}
+.circle{
+    width: 15px;
+    height: 15px;
+    background: #100ded;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+.cont01 .circle{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -7px;
+}
+.cont02 .circle{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -7px;
+    margin-top: 95px;
+}
+.cont03 .circle{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -7px;
+    margin-top: 200px;
+}
+.cont04 .circle{
+    position: absolute;
+    top: 295px;
+    left: 50%;
+    margin-left: -7px;
+}
+.cont01 div:last-child{
+    text-align: left;
+    position: absolute;
+    top: 0;
+    left: calc(50% + 30px);
+}
+.cont02 div:last-child{
+    text-align: right;
+    position: absolute;
+    top: 95px;
+    right: calc(50% + 30px);
+}
+.cont03 div:last-child{
+    text-align: left;
+    position: absolute;
+    top: 200px;
+    left: calc(50% + 30px);
+}
+.cont04 div:last-child{
+    text-align: right;
+    position: absolute;
+    top: 295px;
+    right: calc(50% + 30px);
+}
+
+
+
+.section fp-auto-height{}
+#section5 p{
+    text-align: center;
+    padding: 10px 0;
+    color: #e0e0e0;
+    font-size: 14px;
+}
     
     
+    
+    /*푸터*/
+    #section5{
+        position: relative;
+    }
+    #section5 p{
+        text-align: center;
+        padding: 10px 0;
+        color: #e0e0e0;
+        background: #909090;
+        font-size: 14px;
+}
+    
+    /*footer topbtn*/
+    .footertopbtn{
+        display: block;
+        width: 35px;
+        height: 35px;
+        line-height: 35px;
+        background: #fff;
+        border: 1px solid #e0e0e0;
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        text-align: center;
+        font-size: 13px;
+    }
+    .footertopbtn a{
+        color: #969696;
+        font-weight: bold;
+    }
 }
 /*반응형*/
+
 
 
 
