--- a/css/sub_unavailable_stylesheet.css
+++ b/css/sub_unavailable_stylesheet.css
@@ -104,7 +104,7 @@ a{
 }
 .container h1{
     text-align: center;
-    padding-top: 180px;
+    padding-top: 250px;
     margin-bottom: 50px;
 }
 .container h1 img{
@@ -135,8 +135,197 @@ a{
     font-size: 14px;
 }
 
+/*웹에서 보이지 않음*/
+#header h2{
+    display: none;
+}
+.rightmenu{
+    display: none;
+}
+#pannelbg{
+    display: none;
+}
+/*웹에서 보이지 않음*/
 
 
+
+/*반응형*/
+@media screen and (max-width:768px){
+    body{
+        min-width: auto;
+    }
+    .w1200{
+        width: auto;
+    }
+    
+    /*pannel bg*/
+    #pannelbg{
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.6);
+        display: none;
+        position: absolute;
+        z-index: 1;
+        top:0;
+    }
+    #pannelbg a{
+        position: absolute;
+        right: 5px;
+        color: #000;
+        font-size: 40px;
+    }
+    .section{}
+    /*header*/
+    #header{
+        width: 100%;
+        height: 120px;
+        padding: 20px;
+        background: #fff;
+        position: static;
+        z-index: 1;
+        box-sizing: border-box;
+    }
+    /*headerIn 시작*/
+    .headerIn{
+        position: relative;
+    }
+    .headerIn h1{
+        position: relative;
+        display: inline-block;
+        vertical-align: middle;
+        margin: 0;
+        height: auto;
+    }
+    .headerIn h1 a{
+        display: block;
+    }
+    .headerIn h1 a img{
+        width: 80px;
+    }
+
+    .gnb{
+        display: none;
+    }
+    
+    /*라이트 메뉴*/
+    .rightmenu{
+        display: block;
+        position: absolute;
+        right: 10px;
+        top: 8px;
+    }
+    .rightmenu div{
+        display: inline-block;
+        vertical-align: middle;
+    }
+    .rightmenu div a{}
+    .rightmenu div a img{
+        width: 80px;
+    }
+
+    /*레프트 네비게이션 시작*/
+    body {
+        font-family: "Lato", sans-serif;
+    }
+    .openbtn{
+        color: #000;
+        font-size: 20px;
+        z-index: 1;
+    }
+    .closebtn{
+        position: absolute;
+        top: 20px;
+        right: 0;
+        font-size: 50px;
+        padding-right: 20px;
+        z-index: 3;
+    }
+    .sidenav {
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 2;
+        top: 0;
+        left: 0;
+        background-color: #fff;
+        overflow-x: hidden;
+        transition: 0.5s;
+    }
+    .sidenav .navTop{
+        width: 100%;
+        background: none;
+        position: absolute;
+        top: 0;
+        z-index: 1;
+    }
+    .navTop div{
+        display: inline-block;
+        margin: 0;
+    }
+    .navTop .navLogo{
+        padding: 20px;
+    }
+    .navTop .navLogo a{
+        display: block;
+    }
+    .sidenav .navMenu{
+        width: 100%;
+        text-align: center;
+        margin-top: 180px;
+    }
+    .sidenav .navMenu div{
+        width: 100%;
+        margin: 5px auto;
+        box-sizing: border-box;
+    }
+    .sidenav .navMenu a {
+        /*padding: 8px 8px 8px 32px;*/
+        text-decoration: none;
+        font-size: 24px;
+        font-family: 'Century Gothic';
+        color: #000;
+        display: block;
+        transition: 0.3s;
+    }
+    .sidenav .navMenu div:nth-child(3) a{
+        margin-top: 14px;
+    }
+    .sidenav .navMenu div:nth-child(3) a, 
+    .sidenav .navMenu div:nth-child(4) a{
+        font-size: 20px;
+        color: #969696;
+    }
+    .bottomLogo{
+        text-align: center;
+        position: absolute;
+        bottom: 5%;
+        left: 0;
+    }
+    .bottomLogo img{
+        width: 150px;
+    }
+    /*섹션1 시작*/
+    #section{
+        margin-top: 120px;
+    }
+    .container h1{
+        text-align: center;
+        padding-top: 70px;
+        margin-bottom: 20px;
+    }
+    .container h1 img{
+        width: 150px;
+    }
+    .container p{
+        text-align: center;
+        font-size: 18px;
+        font-weight: 800;
+        color: #3c3f41;
+        line-height: 28px;
+        font-family: 'NanumSquare';
+    }
+
+    /*반응형*/
 
 
 
