--- a/css/sub_work_stylesheet.css
+++ b/css/sub_work_stylesheet.css
@@ -96,23 +96,9 @@ a{
 /*section0 시작*/
 #section{}
 
-
-
 /*섹션1 시작*/
 #section{
     margin-top: 120px;
-}
-.logo{
-    text-align: center;
-    padding-top: 100px;
-}
-.logo img{
-    width: 300px;
-}
-.logo h2{
-    font-size: 40px;
-    color: #858585;
-    margin-top: 50px;
 }
 
 .container{
@@ -124,6 +110,7 @@ a{
     color: #858585;
     padding-top: 200px;
     padding-bottom: 100px;
+    font-size:60px;
 }
 .gallery{
     width: 100%;
@@ -131,7 +118,7 @@ a{
 }
 .gallery div{
     width: 25%;
-    height: 364px;
+    height: 100%;
     display: inline-block;
     position: relative;
 }
@@ -152,6 +139,7 @@ a{
 }
 .gallery div a img{
     width: 100%;
+    height: 438px;
 }
 
 
@@ -166,10 +154,264 @@ a{
     font-size: 14px;
 }
 
+/*웹에서 보이지 않음*/
+#header h2{
+    display: none;
+}
+.rightmenu{
+    display: none;
+}
+#pannelbg{
+    display: none;
+}
+.more{
+    display: none;
+}
+.footertopbtn{
+    display: none;
+}
+/*웹에서 보이지 않음*/
 
 
 
+/*반응형*/
+@media screen and (max-width:768px){
+    body{
+        min-width: auto;
+    }
+    .w1200{
+        width: auto;
+    }
+    
+    /*pannel bg*/
+    #pannelbg{
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.6);
+        display: none;
+        position: absolute;
+        z-index: 1;
+        top:0;
+    }
+    #pannelbg a{
+        position: absolute;
+        right: 5px;
+        color: #000;
+        font-size: 40px;
+    }
+    .section{}
+    /*header*/
+    #header{
+        width: 100%;
+        padding: 20px;
+        height: 120px;
+        background: #f0f0f0;
+        position: static;
+        z-index: 1;
+        box-sizing: border-box;
+    }
+    /*headerIn 시작*/
+    .headerIn{
+        position: relative;
+    }
+    .headerIn h1{
+        position: relative;
+        display: inline-block;
+        vertical-align: middle;
+        margin: 0;
+    }
+    .headerIn h1 a{
+        display: block;
+    }
+    .headerIn h1 a img{
+        width: 80px;
+    }
+    #header h2{
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 50%;
+        margin-right: -36px;
+        font-size: 30px;
+        color: #858585;
+        padding-top: 25px;
+    }
+    .gnb{
+        display: none;
+    }
+    
+    /*라이트 메뉴*/
+    .rightmenu{
+        display: block;
+        position: absolute;
+        right: 10px;
+        top: 8px;
+    }
+    .rightmenu div{
+        display: inline-block;
+        vertical-align: middle;
+    }
+    .rightmenu div a{}
+    .rightmenu div a img{
+        width: 80px;
+    }
 
+    /*레프트 네비게이션 시작*/
+    body {
+        font-family: "Lato", sans-serif;
+    }
+    .openbtn{
+        color: #000;
+        font-size: 20px;
+        z-index: 1;
+    }
+    .closebtn{
+        position: absolute;
+        top: 20px;
+        right: 0;
+        font-size: 50px;
+        padding-right: 20px;
+        z-index: 3;
+    }
+    .sidenav {
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 2;
+        top: 0;
+        left: 0;
+        background-color: #fff;
+        overflow-x: hidden;
+        transition: 0.5s;
+    }
+    .sidenav .navTop{
+        width: 100%;
+        background: none;
+        position: absolute;
+        top: 0;
+        z-index: 1;
+    }
+    .navTop div{
+        display: inline-block;
+        margin: 0;
+    }
+    .navTop .navLogo{
+        padding: 20px;
+    }
+    .navTop .navLogo a{
+        display: block;
+    }
+    .sidenav .navMenu{
+        width: 100%;
+        text-align: center;
+        margin-top: 180px;
+    }
+    .sidenav .navMenu div{
+        width: 100%;
+        margin: 5px auto;
+        box-sizing: border-box;
+    }
+    .sidenav .navMenu a {
+        /*padding: 8px 8px 8px 32px;*/
+        text-decoration: none;
+        font-size: 24px;
+        font-family: 'Century Gothic';
+        color: #000;
+        display: block;
+        transition: 0.3s;
+    }
+    .sidenav .navMenu div:nth-child(3) a{
+        margin-top: 14px;
+    }
+    .sidenav .navMenu div:nth-child(3) a, 
+    .sidenav .navMenu div:nth-child(4) a{
+        font-size: 20px;
+        color: #969696;
+    }
+    .bottomLogo{
+        text-align: center;
+        position: absolute;
+        bottom: 5%;
+        left: 0;
+    }
+    .bottomLogo img{
+        width: 150px;
+    }
+    /*섹션1 시작*/
+    #section{
+        margin-top: 120px;
+    }
+    .container{
+        width: 100%;
+        position: relative;
+    }
+    .container h1{
+        display: none;
+    }
+    .gallery{
+        width: 100%;
+        font-size: 0;
+    }
+    .gallery div{
+        width: 50%;
+        height: 50%;
+        display: inline-block;
+        position: relative;
+    }
+    .gallery div a{
+        display: block;
+    }
+    .gallery div a:after{
+        content:"";
+        width:100%;
+        height:100%;
+        background:rgba(0,0,0,0);
+        position:absolute;
+        top:0;
+        left:0;
+    }
+    .gallery div a:hover:after{
+        background:rgba(0,0,0,0.4);
+    }
+    .gallery div a img{
+        width: 100%;
+        height: 50%;
+    }
+    .more{
+        display: block;
+        width: 90%;
+        height: 35px;
+        background: #000;
+        text-align: center;
+        margin: 25px auto;
+    }
+    .more a{
+        color: #fff;
+        font-size: 18px;
+        line-height: 30px;
+        font-family: 'CenturyGothic';
+    }
+    .more a p{}
+    /*footer topbtn*/
+    .footertopbtn{
+        display: block;
+        width: 35px;
+        height: 35px;
+        line-height: 35px;
+        background: #fff;
+        border: 1px solid #e0e0e0;
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        text-align: center;
+        font-size: 13px;
+    }
+    .footertopbtn a{
+        color: #969696;
+        font-weight: bold;
+    }
+}
+    /*반응형 추가*/
 
 
 
