--- a/css/sub_work_details02_stylesheet.css
+++ b/css/sub_work_details02_stylesheet.css
@@ -366,8 +366,11 @@ a{
         position: absolute;
         top: 20px;
         right: 20px;
+        z-index: 1;
     }
-    .viewclosebtn a{}
+    .viewclosebtn a{
+        display: block;
+    }
     .viewclosebtn a img{
         width: 20px;
     }
@@ -419,7 +422,7 @@ a{
         width: 252px;
         position: absolute;
         right: 50%;
-        margin-top: 250px;
+        margin-top: 230px;
         margin-right: -126px;
     }
     .title li{}
@@ -455,7 +458,6 @@ a{
         color: #969696;
         font-weight: bold;
     }
-    
     /*반응형 추가*/
 
 
