--- a/css/sub_work_details_stylesheet.css
+++ b/css/sub_work_details_stylesheet.css
@@ -100,8 +100,11 @@ a{
     position: absolute;
     top: 200px;
     right: 70px;
+    z-index: 1;
 }
-.viewclosebtn a{}
+.viewclosebtn a{
+    display: block;
+}
 .viewclosebtn a img{}
 
 .details{
@@ -419,7 +422,7 @@ a{
         width: 252px;
         position: absolute;
         right: 50%;
-        margin-top: 250px;
+        margin-top: 230px;
         margin-right: -126px;
     }
     .title li{}
