--- a/css/sub_work_details02_stylesheet.css
+++ b/css/sub_work_details02_stylesheet.css
@@ -361,6 +361,7 @@ a{
     .container{
         padding-top: 0;
         position: relative;
+        margin-bottom: 50px;
     }
     .viewclosebtn{
         position: absolute;
@@ -423,7 +424,7 @@ a{
         width: 252px;
         position: absolute;
         right: 50%;
-        margin-top: 230px;
+        margin-top: 250px;
         margin-right: -126px;
     }
     .title li{}
@@ -458,6 +459,9 @@ a{
     .footertopbtn a{
         color: #969696;
         font-weight: bold;
+    }
+    #footer{
+        bottom: -50px;
     }
     /*반응형 추가*/
 
