--- a/css/main_stylesheet.css
+++ b/css/main_stylesheet.css
@@ -427,7 +427,7 @@ button a{
         display: block;
     }
     .headerIn h1 a img{
-        width: 80px;
+        width: 60px;
     }
     .gnb{
         display: none;
@@ -446,7 +446,7 @@ button a{
     }
     .rightmenu div a{}
     .rightmenu div a img{
-        width: 80px;
+        width: 60px;
     }
 
     /*레프트 네비게이션 시작*/
@@ -455,8 +455,9 @@ button a{
     }
     .openbtn{
         color: #000;
-        font-size: 20px;
         z-index: 1;
+        font-size:30px;
+        cursor:pointer;
     }
     .closebtn{
         position: absolute;
@@ -497,7 +498,7 @@ button a{
     .sidenav .navMenu{
         width: 100%;
         text-align: center;
-        margin-top: 180px;
+        margin-top: 160px;
     }
     .sidenav .navMenu div{
         width: 100%;
@@ -507,28 +508,25 @@ button a{
     .sidenav .navMenu a {
         /*padding: 8px 8px 8px 32px;*/
         text-decoration: none;
-        font-size: 24px;
+        font-size: 30px;
         font-family: 'Century Gothic';
         color: #000;
         display: block;
         transition: 0.3s;
     }
-    .sidenav .navMenu div:nth-child(3) a{
-        margin-top: 14px;
-    }
     .sidenav .navMenu div:nth-child(3) a, 
     .sidenav .navMenu div:nth-child(4) a{
-        font-size: 20px;
+        font-size: 24px;
         color: #969696;
     }
     .bottomLogo{
         text-align: center;
         position: absolute;
-        bottom: 5%;
+        bottom: 5px;
         left: 0;
     }
     .bottomLogo img{
-        width: 150px;
+        width: 130px;
     }
     
     /*섹션1*/
