--- a/css/main_stylesheet.css
+++ b/css/main_stylesheet.css
@@ -521,12 +521,10 @@ button a{
     }
     .bottomLogo{
         text-align: center;
-        position: absolute;
-        bottom: 5px;
-        left: 0;
     }
     .bottomLogo img{
-        width: 130px;
+        width: 120px;
+        padding-top: 15px;
     }
     
     /*섹션1*/
