--- a/css/sub_aboutme_stylesheet.css
+++ b/css/sub_aboutme_stylesheet.css
@@ -370,7 +370,7 @@ a{
     #header{
         width: 100%;
         padding: 20px;
-        height: 120px;
+        height: 100px;
         background: #e9e9e9;
         position: static;
         z-index: 1;
@@ -389,7 +389,7 @@ a{
         display: block;
     }
     .headerIn h1 a img{
-        width: 80px;
+        width: 60px;
     }
     .headerIn h2{
         display: block;
@@ -399,7 +399,7 @@ a{
         text-align: center;
         font-size: 20px;
         color: #858585;
-        padding-top: 25px;
+        padding-top: 18px;
     }
     .gnb{
         display: none;
@@ -413,7 +413,7 @@ a{
         display: block;
         position: absolute;
         right: 10px;
-        top: 8px;
+        top: 10px;
     }
     .rightmenu div{
         display: inline-block;
@@ -421,7 +421,7 @@ a{
     }
     .rightmenu div a{}
     .rightmenu div a img{
-        width: 80px;
+        width: 60px;
     }
 
     /*레프트 네비게이션 시작*/
@@ -430,8 +430,9 @@ a{
     }
     .openbtn{
         color: #000;
-        font-size: 20px;
         z-index: 1;
+        font-size:30px;
+        cursor:pointer;
     }
     .closebtn{
         position: absolute;
@@ -472,7 +473,7 @@ a{
     .sidenav .navMenu{
         width: 100%;
         text-align: center;
-        margin-top: 180px;
+        margin-top: 160px;
     }
     .sidenav .navMenu div{
         width: 100%;
@@ -482,28 +483,23 @@ a{
     .sidenav .navMenu a {
         /*padding: 8px 8px 8px 32px;*/
         text-decoration: none;
-        font-size: 24px;
+        font-size: 28px;
         font-family: 'Century Gothic';
         color: #000;
         display: block;
         transition: 0.3s;
     }
-    .sidenav .navMenu div:nth-child(3) a{
-        margin-top: 14px;
-    }
     .sidenav .navMenu div:nth-child(3) a, 
     .sidenav .navMenu div:nth-child(4) a{
-        font-size: 20px;
+        font-size: 22px;
         color: #969696;
     }
     .bottomLogo{
         text-align: center;
-        position: absolute;
-        bottom: 5%;
-        left: 0;
     }
     .bottomLogo img{
-        width: 150px;
+        width: 120px;
+        padding-top: 10%;
     }
     /*섹션2 시작*/
     #section2{}
@@ -696,7 +692,7 @@ a{
     }
     .cont04 .circle{
         position: absolute;
-        top: 414px;
+        top: 416px;
         left: 50%;
         margin-left: -7px;
     }
@@ -721,7 +717,7 @@ a{
     .cont04 div:last-child{
         text-align: right;
         position: absolute;
-        top: 414px;
+        top: 416px;
         right: calc(50% + 30px);
     }
     
@@ -742,7 +738,7 @@ a{
     }
     #section5 p{
         text-align: center;
-        padding: 10px 0;
+        padding: 13px 0;
         color: #e0e0e0;
         background: #909090;
         font-size: 14px;
@@ -751,9 +747,9 @@ a{
     /*footer topbtn*/
     .footertopbtn{
         display: block;
-        width: 35px;
-        height: 35px;
-        line-height: 35px;
+        width: 41px;
+        height: 41px;
+        line-height: 41px;
         background: #fff;
         border: 1px solid #e0e0e0;
         position: fixed;
