--- a/css/sub_unavailable_stylesheet.css
+++ b/css/sub_unavailable_stylesheet.css
@@ -108,11 +108,11 @@ a{
     margin-bottom: 50px;
 }
 .container h1 img{
-    width: 300px;
+    width: 200px;
 }
 .container p{
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 800;
     color: #3c3f41;
     line-height: 60px;
@@ -178,7 +178,7 @@ a{
     /*header*/
     #header{
         width: 100%;
-        height: 120px;
+        height: 100px;
         padding: 20px;
         background: #fff;
         position: static;
@@ -200,7 +200,7 @@ a{
         display: block;
     }
     .headerIn h1 a img{
-        width: 80px;
+        width: 60px;
     }
 
     .gnb{
@@ -212,7 +212,7 @@ a{
         display: block;
         position: absolute;
         right: 10px;
-        top: 8px;
+        top: 10px;
     }
     .rightmenu div{
         display: inline-block;
@@ -220,7 +220,7 @@ a{
     }
     .rightmenu div a{}
     .rightmenu div a img{
-        width: 80px;
+        width: 60px;
     }
 
     /*레프트 네비게이션 시작*/
@@ -229,8 +229,9 @@ a{
     }
     .openbtn{
         color: #000;
-        font-size: 20px;
         z-index: 1;
+        font-size:30px;
+        cursor:pointer;
     }
     .closebtn{
         position: absolute;
@@ -271,7 +272,7 @@ a{
     .sidenav .navMenu{
         width: 100%;
         text-align: center;
-        margin-top: 180px;
+        margin-top: 160px;
     }
     .sidenav .navMenu div{
         width: 100%;
@@ -281,28 +282,23 @@ a{
     .sidenav .navMenu a {
         /*padding: 8px 8px 8px 32px;*/
         text-decoration: none;
-        font-size: 24px;
+        font-size: 28px;
         font-family: 'Century Gothic';
         color: #000;
         display: block;
         transition: 0.3s;
     }
-    .sidenav .navMenu div:nth-child(3) a{
-        margin-top: 14px;
-    }
     .sidenav .navMenu div:nth-child(3) a, 
     .sidenav .navMenu div:nth-child(4) a{
-        font-size: 20px;
+        font-size: 22px;
         color: #969696;
     }
     .bottomLogo{
         text-align: center;
-        position: absolute;
-        bottom: 5%;
-        left: 0;
     }
     .bottomLogo img{
-        width: 150px;
+        width: 120px;
+        padding-top: 10%;
     }
     /*섹션1 시작*/
     #section{
@@ -324,7 +320,9 @@ a{
         line-height: 28px;
         font-family: 'NanumSquare';
     }
-
+    #footer p{
+        padding: 13px 0;
+    }
     /*반응형*/
 
 
