--- a/css/sub_aboutme_stylesheet.css
+++ b/css/sub_aboutme_stylesheet.css
@@ -120,15 +120,23 @@ a{
 
 
 /*섹션2 시작*/
-#section2{}
+#section2{
+    position: relative;
+}
 
 /*about me 시작*/
-.aboutme{}
+.aboutme{
+    position: absolute;
+    bottom: 50%;
+    margin-bottom: -225px;
+    right: 50%;
+    margin-right: -600px;
+}
 .aboutme h1{
     text-align: center;
     font-size:60px;
     color: #858585;
-    margin-top: 100px;
+
 }
 .aboutme h1 p{
     font-size:48px
@@ -137,7 +145,7 @@ a{
 
 .contentTitle01{
     text-align: center;
-    margin-top: 80px;
+    margin-top: 70px;
 }
 .contentTitle01 img{}
 
@@ -145,7 +153,7 @@ a{
 .graph{
     width: 100%;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 .blueboxing{
     width: 460px;
@@ -215,9 +223,12 @@ a{
     margin-top: 20px;
 }
 
-
-
-.history{}
+/*section4*/
+#section4{
+    position: relative;
+}
+.history{
+}
 .history h1{
     margin-top: 50px;
     margin-bottom: 30px;
@@ -226,7 +237,7 @@ a{
 .historygraph{}
 .center{
     width: 3px;
-    height: 390px;
+    height: 330px;
     background: #100ded;
     margin: 0 auto;
     position: relative;
@@ -261,13 +272,13 @@ a{
 }
 .cont01 .circle{
     position: absolute;
-    top: 355px;
+    top: 375px;
     left: 50%;
     margin-left: -7px;
 }
 .cont02 .circle{
     position: absolute;
-    top: 480px;
+    top: 490px;
     left: 50%;
     margin-left: -7px;
 }
@@ -279,20 +290,20 @@ a{
 }
 .cont04 .circle{
     position: absolute;
-    top: 735px;
+    top: 715px;
     left: 50%;
     margin-left: -7px;
 }
 .cont01 div:last-child{
     text-align: left;
     position: absolute;
-    top: 355px;
+    top: 375px;
     left: calc(50% + 30px);
 }
 .cont02 div:last-child{
     text-align: right;
     position: absolute;
-    top: 480px;
+    top: 490px;
     right: calc(50% + 30px);
 }
 .cont03 div:last-child{
@@ -304,7 +315,7 @@ a{
 .cont04 div:last-child{
     text-align: right;
     position: absolute;
-    top: 735px;
+    top: 715px;
     right: calc(50% + 30px);
 }
 
