--- a/css/main_stylesheet.css
+++ b/css/main_stylesheet.css
@@ -627,10 +627,6 @@ button a{
         color: #100ded;
     }
     
-    
-    
-    
-    
     /*섹션2 시작*/
     #section2{
         width: 100%;
@@ -638,6 +634,13 @@ button a{
         background: url(../images/main/work_bg.jpg) no-repeat;
         background-size: cover;
         margin-top: 0;
+    }
+    .forward{
+        position: absolute;
+        bottom: 50%;
+        margin-bottom: -107px;
+        right: 50%;
+        margin-right: -180px;
     }
     .bg{
         text-align: center;
@@ -718,7 +721,7 @@ button a{
 
     .bluebox{
         width: 85%;
-        height: 300px;
+        height: 290px;
         margin: 0 auto;
         background: none;
         border: 5px solid #100ded;
@@ -757,10 +760,9 @@ button a{
         margin-left: 10px;
     }
     .left02{
-        margin-top: 0;
         position: absolute;
         right: 5%;
-        top: 35px;
+        top: 5px;
     }
     .left02 li{
         display: inline-block;
@@ -789,6 +791,7 @@ button a{
         position: absolute;
         right: 50%;
         margin-right: -140px;
+        margin-top: 60px;
     }
     form div + div {
         margin-top: 5px;
