--- a/css/sub_work_details01_stylesheet.css
+++ b/css/sub_work_details01_stylesheet.css
@@ -377,7 +377,7 @@ a{
     }
     .slick-arrow{
         position:absolute;
-        top:50%;
+        top:50%;s
         margin-top:-25px;
         font-size:40px;
         color: #c2c2c2;
